--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
+    
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18
+        cache: 'npm'
 
     - name: build files
       run: npm run build
