--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
         node-version: 18
         cache: 'npm'
 
+    - name: Install dependencies
+      run: npm install
+
     - name: build files
       run: npm run build
 
